Implementacion de crear deuda

--- a/src/app/deuda/componentes/listar-deudas/listar-deudas.component.html
+++ b/src/app/deuda/componentes/listar-deudas/listar-deudas.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="aling-izq">
-      <button mat-raised-button color="primary" [matTooltip]="'Agregar Usuario'" (click)="irCrear()"><mat-icon>add</mat-icon></button>
+      <button mat-raised-button color="primary" [matTooltip]="'Agregar Deuda'" (click)="irCrear()"><mat-icon>add</mat-icon></button>
     </div>
 
 
