Creacion y habilitacion de vista de consulta

--- a/src/app/app/componentes/app.component.html
+++ b/src/app/app/componentes/app.component.html
@@ -328,6 +328,10 @@
           <mat-icon>group</mat-icon>
           <span>Gestión Usuarios</span>
         </button>
+        <button mat-menu-item (click)="irConsultar()">
+          <mat-icon>search</mat-icon>
+          <span>Consultar Deudas</span>
+        </button>
         <button mat-menu-item class="warn" (click)="cerrarSesion()">
           <mat-icon>logout</mat-icon>
           <span>Cerrar Sesión</span>
